[package]
name = "rust-http-server"
version = "0.1.0"
authors = ["Elias Tandel <elias.tandel@stone.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
log = "0.4.8"
env_logger = "0.7.1"
anyhow = "1.0.31"
thiserror = "1.0.19"
fehler = "1.0.0"
