[package]
name = "isner"
version = "0.0.1-alpha.1"
authors = ["Elias Tandel <elias.tandel@stone.com.br>"]
edition = "2018"
description = "A static HTTP server that aims to be minimalistic and fast."
readme = "README.md"
repository = "https://github.com/etandel/isner"
license = "MIT or Apache-2.0"
keywords = ["HTTP", "web", "server"]
categories = ["network-programming"]

[profile.release]
opt-level = 3
lto = "thin"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
log = "0.4.8"
env_logger = "0.7.1"
anyhow = "1.0.31"
thiserror = "1.0.19"
fehler = "1.0.0"
threadpool = "1.8.1"
clap = "2.33.1"
